--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.shawnlin:number-picker:2.4.10'
+    implementation 'com.github.andremion:counterfab:1.2.2'
 
 
     testImplementation 'junit:junit:4.12'
