--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,12 +63,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-config-ktx:19.2.0'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+    implementation 'androidx.preference:preference:1.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.shawnlin:number-picker:2.4.10'
     implementation 'com.github.andremion:counterfab:1.2.2'
     implementation 'com.github.Chrisvin:EasyReveal:1.2'
+    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
 
 
     testImplementation 'junit:junit:4.12'
