--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
         }
         local{
             initWith debug
-            buildConfigField "String", "hostname", '"http://192.168.0.14:8080"'
+            buildConfigField "String", "hostname", '"http://192.168.0.13:8080"'
         }
     }
     compileOptions {
@@ -84,6 +84,7 @@ dependencies {
 
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
