--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     signingConfigs {
-        Relase {
-            storeFile file('/Users/axelfernandez/Desktop/DeliveryLavalle-keystore')
+        Release {
+            storeFile file('/Users/axelfernandez/Desktop/Delivery Lavalle/DeliveryLavalle-keystore')
             storePassword 'californica'
             keyAlias 'DeliveryLavalle-keystore'
             keyPassword 'californica1'
@@ -20,8 +20,8 @@ android {
         applicationId "com.axelfernandez.deliverylavalle"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         buildConfigField "String", "hostname", '"https://deliverylavalle.com.ar"'
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -31,12 +31,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "hostname", '"https://deliverylavalle.com.ar"'
-
+            signingConfig signingConfigs.Release
         }
         local{
             initWith debug
-            buildConfigField "String", "hostname", '"http://192.168.0.13:8080"'
+            buildConfigField "String", "hostname", '"http://192.168.0.16:8080"'
+        }
+        live{
+            initWith debug
+            buildConfigField "String", "hostname", '"https://deliverylavalle.com.ar"'
         }
     }
     compileOptions {
